k8s/auth/templates/ltb-passwd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: auth-ltb-passwd-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ssl-ldap2.anshulg.com`)
      middlewares:
        - name: security-headers
          namespace: traefik
      services:
        - name: auth-ltb-passwd
          port: http
          kind: Service
  tls:
    secretName: auth-ltb-passwd-cert
    domains:
      - main: ssl-ldap2.anshulg.com
