k8s/auth/templates/phpldapadmin.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: auth-phpldapadmin-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`phpldapadmin.anshulg.com`)
      middlewares:
        - name: security-headers
          namespace: traefik
      services:
        - name: auth-phpldapadmin
          port: http
          kind: Service
  tls:
    secretName: auth-phpldapadmin-cert
    domains:
      - main: phpldapadmin.anshulg.com
